# PDF_ChatBot

./: .env  README.md  app1.py  index.html  main.py  pyproject.toml  template.sh
backend/: app.py
chroma_db/: chroma.sqlite3
chroma_langchain_db/: chroma.sqlite3
chroma_langchain_db/8e90b499-a38a-4f45-82f2-cdde66055c01/: index_metadata.pickle
research/: experiment.ipynb
research/chroma_langchain_db/: chroma.sqlite3
src/: helper.py  pipeline.py
